--- a/index.html
+++ b/index.html
@@ -1,20 +1,99 @@
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>FinApolo | Asistente financiero</title>
+  <title>FinApolo | Tu copiloto financiero</title>
   <link rel="stylesheet" href="styles.css" />
+  <style>
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
+
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      font-size: 18px;
+      background-color: #f8f9fa;
+      color: #212529;
+      line-height: 1.6;
+    }
+
+    header {
+      background-color: #ff6600;
+      color: white;
+      padding: 20px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      flex-wrap: wrap;
+    }
+
+    header img {
+      height: 60px;
+    }
+
+    nav ul {
+      list-style: none;
+      display: flex;
+      gap: 25px;
+    }
+
+    nav ul li a {
+      text-decoration: none;
+      color: white;
+      font-weight: bold;
+      font-size: 20px;
+    }
+
+    nav ul li a:hover {
+      text-decoration: underline;
+    }
+
+    main {
+      padding: 40px 20px;
+    }
+
+    section {
+      margin-bottom: 60px;
+    }
+
+    h1, h2 {
+      color: #ff6600;
+      margin-bottom: 20px;
+    }
+
+    .btn {
+      background-color: #ff6600;
+      color: white;
+      padding: 15px 30px;
+      border: none;
+      border-radius: 8px;
+      font-size: 18px;
+      cursor: pointer;
+      text-decoration: none;
+    }
+
+    footer {
+      text-align: center;
+      background-color: #343a40;
+      color: white;
+      padding: 20px;
+    }
+  </style>
 </head>
 <body>
   <header>
-    <img src="logo.png" alt="Logo FinApolo" class="logo-header" />
+    <img src="logo.png" alt="Logo FinApolo" />
     <nav>
       <ul>
         <li><a href="#inicio">Inicio</a></li>
-        <li><a href="#nosotros">Sobre Nosotros</a></li>
+        <li><a href="#nosotros">Nosotros</a></li>
         <li><a href="#servicios">Servicios</a></li>
+        <li><a href="#beneficios">Beneficios</a></li>
+        <li><a href="#como-funciona">Cómo Funciona</a></li>
+        <li><a href="#testimonios">Testimonios</a></li>
         <li><a href="#contacto">Contacto</a></li>
         <li><a href="#proteccion">Protección de Datos</a></li>
       </ul>
@@ -22,49 +101,58 @@
   </header>
 
   <main>
-    <section id="inicio" class="centered">
+    <section id="inicio">
       <h1>Bienvenido a FinApolo</h1>
-      <p>Tu asistente financiero inteligente para emprendedores y negocios.</p>
-      <a href="https://wa.me/573334309834" target="_blank" class="btn">
-        Habla con tu asistente en WhatsApp
-      </a>
+      <p>Somos tu copiloto financiero: ayudamos a emprendedores, pymes y profesionales a tener control total de sus finanzas de forma fácil, rápida y desde WhatsApp.</p>
+      <a class="btn" href="https://wa.me/573334309834" target="_blank">Habla con tu asistente</a>
     </section>
 
     <section id="nosotros">
-      <h2>Sobre Nosotros</h2>
-      <p>FinApolo nace con la visión de simplificar las finanzas para emprendedores, pymes y profesionales independientes. Nuestro enfoque combina tecnología, cercanía y educación financiera para ayudarte a tomar mejores decisiones.</p>
+      <h2>¿Quiénes somos?</h2>
+      <p>FinApolo nació con una misión: democratizar el acceso a herramientas financieras inteligentes para que cualquier negocio pueda tomar decisiones informadas y sostenibles. Fusionamos tecnología, cercanía y experiencia en finanzas reales.</p>
     </section>
 
     <section id="servicios">
       <h2>Servicios</h2>
       <ul>
-        <li>✔ Registro de ingresos y gastos</li>
-        <li>✔ Generación automática de balances y estados financieros</li>
-        <li>✔ Proyecciones y presupuestos inteligentes</li>
-        <li>✔ Integración con WhatsApp y herramientas financieras</li>
+        <li>📌 Registro de ingresos y gastos vía WhatsApp</li>
+        <li>📊 Generación de estados financieros automatizados</li>
+        <li>📈 Proyecciones y presupuestos personalizados</li>
+        <li>🔗 Integraciones con bancos, datáfonos y apps contables</li>
+        <li>🧠 Asistencia basada en inteligencia artificial</li>
       </ul>
+    </section>
+
+    <section id="beneficios">
+      <h2>Beneficios para tu negocio</h2>
+      <p>✔ Ahorra tiempo y dinero en procesos contables<br>✔ Visualiza tu salud financiera en tiempo real<br>✔ Toma decisiones con datos y sin estrés<br>✔ Sin necesidad de apps complejas o conocimientos técnicos</p>
+    </section>
+
+    <section id="como-funciona">
+      <h2>¿Cómo funciona?</h2>
+      <p>1. Regístrate en WhatsApp<br>2. Empieza a registrar ingresos y gastos con mensajes simples<br>3. Recibe reportes, proyecciones y alertas financieras<br>4. Crece tu negocio con datos reales</p>
+    </section>
+
+    <section id="testimonios">
+      <h2>Lo que dicen nuestros usuarios</h2>
+      <p>⭐ "Gracias a FinApolo logré entender mis gastos y crecer mi empresa un 30%" – Camila, emprendedora<br>
+      ⭐ "Ahora sé cuánto gano de verdad y tengo paz mental financiera" – Andrés, independiente</p>
     </section>
 
     <section id="contacto">
       <h2>Contacto</h2>
-      <p>¿Tienes preguntas o necesitas soporte?</p>
-      <p>Escríbenos a: <a href="mailto:info@finapolo.com">info@finapolo.com</a></p>
-      <p>O envíanos un mensaje por <a href="https://wa.me/573334309834" target="_blank">WhatsApp</a></p>
+      <p>📩 Escríbenos a: <a href="mailto:info@finapolo.com">info@finapolo.com</a><br>
+      💬 WhatsApp: <a href="https://wa.me/573334309834" target="_blank">+57 333 430 9834</a></p>
     </section>
 
     <section id="proteccion">
       <h2>Protección de Datos</h2>
-      <p>FinApolo cumple con las normativas vigentes sobre protección de datos. Toda tu información es confidencial y será tratada bajo los más altos estándares de seguridad y privacidad.</p>
+      <p>FinApolo cumple con la Ley 1581 de 2012 y las normas de protección de datos. Tu información está segura con nosotros y se usa exclusivamente para brindarte un mejor servicio financiero.</p>
     </section>
   </main>
 
   <footer>
     <p>&copy; 2025 FinApolo. Todos los derechos reservados.</p>
   </footer>
-
-  <!-- Botón flotante de WhatsApp -->
-  <a href="https://wa.me/573334309834" class="whatsapp-float" target="_blank" title="Chatea con nosotros en WhatsApp">
-    💬
-  </a>
 </body>
 </html>
